@@ -7,6 +7,7 @@
 * Page rendering will now use the draft page instead of public page for logged in
   users with change permissions, unless the ``preview`` GET parameter is used.
 * Fixed "Expand all / Collapse all" not reflecting real state of the placeholder tree
+* Fixed a bug where Aliased plugins would render even if their host page was unpublished.
 
 
 === 3.4.5 (2017-10-12) ===
